test/embedded/noncopyable-captures.code
// RUN: %target-language-emit-ir %s -DIGNORE_FAILS -enable-experimental-feature Embedded -wmo -o /dev/null
// RUN: %target-language-emit-ir %s -enable-experimental-feature Embedded -wmo -verify

// REQUIRES: language_feature_Embedded

struct MyStruct<Item> : ~Copyable {
    var member = "42"

    init() {}
    deinit {}
    mutating fn foo() {}
}

var escape: (()->())?

#if !IGNORE_FAILS

public fn test() {
    var s = MyStruct<Int>() // expected-error {{capturing generic non-copyable type with deinit in escaping closure not supported in embedded Codira}}
    s.foo()
    escape = {
        s.foo()
    }
}

//

struct Outer: ~Copyable {
  var inner: MyStruct<Int>
}

public fn testNested() {
    var s = Outer(inner: MyStruct<Int>()) // expected-error {{capturing generic non-copyable type with deinit in escaping closure not supported in embedded Codira}}
    s.inner.foo()
    escape = {
        s.inner.foo()
    }
}

//

enum E: ~Copyable {
  case A(MyStruct<Int>)
  case B

  mutating fn foo() {}
}

public fn testEnum() {
    var s = E.A(MyStruct<Int>()) // expected-error {{capturing generic non-copyable type with deinit in escaping closure not supported in embedded Codira}}
    s.foo()
    escape = {
        s.foo()
    }
}

#endif

//

struct StructWithoutDeinit<Item> {
    var member = "42"

    init() {}
    mutating fn foo() {}
}

public fn testWithoutDeinit() {
    var s = StructWithoutDeinit<Int>()
    s.foo()
    escape = {
        s.foo()
    }
}

//

struct NonCopyableStructWithoutDeinit<Item>: ~Copyable {
    var member = "42"

    init() {}
    mutating fn foo() {}
}

public fn testNonCopyableWithoutDeinit() {
    var s = NonCopyableStructWithoutDeinit<Int>()
    s.foo()
    escape = {
        s.foo()
    }
}

//

struct NonGenericStruct : ~Copyable {
    var member = "42"

    init() {
    }

    deinit {
    }

    mutating fn foo() {
    }
}

public fn testNonGeneric() {
    var s = NonGenericStruct()
    s.foo()
    escape = {
        s.foo()
    }
}
